# banksystemrust

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.tools  README.md  SKILL.md  cleanup_thai_comments.py  cleanup_thai_comments.sh  docker-compose.prod.yml  docker-compose.yml  fix_thai_comments.py  fix_thai_comments_final.py  project_plan.html  run.sh
.github/workflows/: ci.yml
benches/: crypto_bench.rs
config/: default.toml
obsidian_vault/: index.md
obsidian_vault/.obsidian/: workspace.json
obsidian_vault/Errors/: AppConfigError_Config.md  AppConfigError_Message.md  BlockchainError_ConsensusFailed.md  BlockchainError_Crypto.md  BlockchainError_DatabaseError.md  BlockchainError_Http.md  BlockchainError_InvalidTransaction.md  BlockchainError_NodeUnreachable.md  BlockchainError_Timeout.md  BlockchainError_TransactionFailed.md  CryptoError_DecryptionFailed.md  CryptoError_EncryptionFailed.md  CryptoError_HsmError.md  CryptoError_InvalidKey.md  CryptoError_KeyGenerationFailed.md  CryptoError_SigningFailed.md  CryptoError_VerificationFailed.md  IdentityError_Crypto.md  IdentityError_HashMismatch.md  IdentityError_NotFound.md  IdentityError_Unauthorized.md  IdentityError_ValidationFailed.md  NetworkError_BothFailed.md  NetworkError_ConnectionLost.md  NetworkError_QuicFailed.md  NetworkError_TcpFailed.md  NetworkError_Timeout.md  NetworkError_TlsError.md  P2pError_Crypto.md  P2pError_HandshakeFailed.md  P2pError_Network.md  P2pError_PeerNotFound.md  P2pError_TlsError.md  RedisCacheError_Client.md  RedisCacheError_SecretLoad.md  RedisCacheError_Serialization.md  RedisCacheError_Timeout.md  TlsError_CertGeneration.md  TlsError_CertLoading.md  TlsError_InvalidKey.md
obsidian_vault/Functions/: AppConfig_default.md  AppConfig_load.md  AppConfig_validate.md  AppConfig_validate_with_mode.md  BlockchainClient_create_transaction.md  BlockchainClient_drain_queue.md  BlockchainClient_get_transaction_status.md  BlockchainClient_new.md  BlockchainClient_queue_len.md  BlockchainClient_retry_all_queued.md  BlockchainClient_send_to_node.md  BlockchainClient_submit.md  From_from.md  HsmClient_drop.md  HsmClient_find_key.md  HsmClient_new.md  HsmClient_sign_ed25519.md  KeyPair_drop.md  KeyPair_from_bytes.md  KeyPair_generate.md  KycData_anonymize.md  KycData_compute_hash.md  NetworkChannel_connect.md  NetworkChannel_receive.md  NetworkChannel_send.md  P2pNode_add_peer.md  P2pNode_new.md  P2pNode_peers.md  P2pNode_select_peers.md  P2pNode_send_kyc.md  P2pNode_send_kyc_inner.md  P2pNode_with_load_balancer.md  P2pNode_with_timeouts.md  Protocol_fmt.md  QueryRoot_get_identity.md  QueryRoot_verify_ndid_record.md  RateLimitConfig_default.md  RedisCache_check_rate_limit.md  RedisCache_get_connection.md  RedisCache_get_transaction_status.md  (+94 more)
obsidian_vault/Modules/: blockchain.md  config.md  crypto.md  identity.md  main.md  metrics.md  network_mod.md  network_quic_channel.md  network_tcp_channel.md  network_tls.md  p2p_quic.md  redis_cache.md  schema.md
obsidian_vault/Types/: AnonymizedKyc.md  AppConfig.md  AppConfigError.md  BlockchainClient.md  BlockchainConfig.md  BlockchainError.md  BlockchainTransaction.md  CachedTransactionStatus.md  Cli.md  ConnectionChannel.md  ConnectionStream.md  CryptoConfig.md  CryptoError.md  EncryptedPayload.md  HsmClient.md  IdentityError.md  IdentityRecord.md  IdentityStatus.md  IdentityStatusGql.md  KeyPair.md  KycData.md  KycResponse.md  LoadBalancerConfig.md  LoadBalancerStrategy.md  LoggingConfig.md  NetworkChannel.md  NetworkConfig.md  NetworkError.md  P2pError.md  P2pMessage.md  P2pNode.md  Protocol.md  QueryRoot.md  RateLimitConfig.md  RateLimitState.md  RedisCache.md  RedisCacheError.md  RedisConfig.md  ServerConfig.md  SignedPayload.md  (+7 more)
obsidian_vault/graphify/: 3-layer system architecture.md  API Versioning & Backward Compatibility.md  Approved security-vetted crates.md  ArcT  ArcRwLockT shared state pattern.md  Asynchronous Core (tokio runtime).md  Audit Trail & Non-Repudiation.md  Bank Node Service.md  Blockchain Adapter.md  Code changes checklist.md  (+76 more)
src/: blockchain.rs  config.rs  crypto.rs  identity.rs  lib.rs  main.rs  metrics.rs  p2p_quic.rs  redis_cache.rs  schema.rs
tests/: integration_test.rs
(+6 files in other folders)
